@@ -1,3 +1,8 @@
+2004-10-07 Hasso Tepper <hasso at quagga.net>
+
+	* connected.c, main.c, rt_netlink.c, rtadv.c, zebra_rib.c, zserv.c:
+	  Fix warnings: make strings const, signed -> unsigned.
+
 2004-10-05 Paul Jakma <paul@dishone.st>
 
 	* irdp_packet.c: (parse_irdp_packet) style issues.
